--- a/code/UniversalCrackers/pom.xml
+++ b/code/UniversalCrackers/pom.xml
@@ -53,6 +53,16 @@
 			<artifactId>CrackersService</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.5.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.5.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 	<finalName>UniversalCrackers</finalName>
